tests/src/frontend/syntax/invalid/macro_typeid_expr_dot.sk
base class B {
  macro fun m(): void {
    #ThisClass.f()
  }

  static fun f(): void {
    void
  }
}

fun main(): void {
  print_string("FAIL");
}
